# cmake_tutorial

./: .gitignore  README.md  TODO.md  multi-target-debugging - Shortcut.lnk
01-intro-cmake/: cmake_intoduction.pptx  recommended_literature.md
02-basic-hello/: CMakeLists.txt
03-simple-subdirs/: CMakeLists.txt
03-simple-subdirs/03-simple-subdirs_workarounds/: 03_project_structure.txt
03-simple-subdirs/03-simple-subdirs_workarounds/src/: CMakeLists.txt  hello.cpp
03-simple-subdirs/include/: hello.h
03-simple-subdirs/src/: CMakeLists.txt
04-multifile-project/: README.md  math_functions.h
05-using-libraries/: README.md
cmake-examples/02-basic-hello/: 02_project_structure.txt  trainer-notes.md
cmake-examples/03-simple-subdirs/: CMakeLists.txt
cmake-examples/03-simple-subdirs/03-simple-subdirs_workarounds/: CMakeLists.txt
cmake-examples/03-simple-subdirs/03-simple-subdirs_workarounds/src/: CMakeLists.txt
cmake-examples/04-multifile-project/: 04_project_structure.txt  CMakeLists.txt  main.cpp  trainer-notes.md
cmake-examples/05-using-libraries/: 05_project_structure.txt  CMakeLists.txt  trainer-notes.md
cmake-examples/05-using-libraries/src/: CMakeLists.txt  hello.cpp
cmake-examples/06-google_test/: 06_project_structure.txt  CMakeLists.txt  trainer-notes.md
cmake-examples/06-google_test/src/mylib/: CMakeLists.txt  calculator.cpp  calculator.h
cmake-examples/06-google_test/tests/: CMakeLists.txt  calculator_test.cpp
cmake-examples/07-gtest-dependency-injection/: 07_project_structure.txt  CMakeLists.txt  trainer-notes.md
cmake-examples/07-gtest-dependency-injection/src/: CMakeLists.txt  main.cpp
cmake-examples/07-gtest-dependency-injection/src/app/: CMakeLists.txt  user_processor.cpp  user_processor.h
cmake-examples/07-gtest-dependency-injection/src/infra/: CMakeLists.txt  ilogger.h  real_logger.cpp  real_logger.h
cmake-examples/07-gtest-dependency-injection/tests/: CMakeLists.txt
cmake-examples/07-gtest-dependency-injection/tests/my_app_test/: CMakeLists.txt  my_app_test.cpp
cmake-examples/07-gtest-dependency-injection/tests/real_logger_tests/: CMakeLists.txt  real_logger_test.cpp
cmake-examples/08-memory-leak-asan/: 08_project_structure.txt  CMakeLists.txt
cmake-examples/08-memory-leak-asan/doc/: shared_ptr_circular_dependency_problem.md
cmake-examples/08-memory-leak-asan/include/: TradeProcessor.hpp  TradingStrategy.hpp
cmake-examples/08-memory-leak-asan/src/: Trade.cpp  TradingAccount.cpp  TradingStrategy.cpp  main.cpp
cmake-examples/08-top-continious-memory-leak/: main.cpp
cmake-examples/09-memory-leak-asan/doc/: shared_ptr_circular_dependency_problem.md
cmake-examples/09-memory-leak-asan/include/: Trade.hpp  TradingAccount.hpp
cmake-examples/09-memory-leak-asan/src/: TradeProcessor.cpp  main.cpp
cmake-examples/09-top-continious-memory-leak/: CMakeLists.txt  main.cpp
cmake-examples/10-micro-benchmarking/: 10_project_structure.txt  CMakeLists.txt
cmake-examples/10-micro-benchmarking/include/benchmark/: Benchmark.cpp  Benchmark.h
cmake-examples/10-micro-benchmarking/src/: main.cpp
cmake-examples/11-rdtsc-CPU-cycles-benchmarking/: CMakeLists.txt  main.cpp
cmake-examples/12-valgrind-perf-optimization/: CMakeLists.txt
cmake-examples/12-valgrind-perf-optimization/doc/: instruction.md  perf.log.txt  understand_callgrind_output.md
cmake-examples/12-valgrind-perf-optimization/src/: naive.cpp  optimized.cpp
cmake-examples/13-static-code-analisys/: .clang-tidy  CMakeLists.txt
cmake-examples/13-static-code-analisys/doc/: static_code_analysis.md
cmake-examples/13-static-code-analisys/include/: FinanceCalculator.h  mistakes.h
cmake-examples/13-static-code-analisys/src/: FinanceCalculator.cpp  main.cpp  mistakes.cpp
cmake-examples/13-static-code-analisys/tests/: test_calculator.cpp
cmake-examples/14-vtable-virtual-table/: CMakeLists.txt
cmake-examples/14-vtable-virtual-table/doc/: virtual_table.html  virtual_table.md
cmake-examples/14-vtable-virtual-table/src/diamond_problem/: DiamondProblem.h  main.cpp
cmake-examples/14-vtable-virtual-table/src/fintech_vtable/: TradableAsset.h  main.cpp
cmake-examples/14-vtable-virtual-table/src/fintech_vtable/bond/: Bond.cpp  Bond.h
cmake-examples/14-vtable-virtual-table/src/fintech_vtable/stock/: Stock.cpp  Stock.h
cmake-examples/14-vtable-virtual-table/src/hello_vtable/: main.cpp
cmake-examples/15-boost-ipc-shared-memory/: CMakeLists.txt  reader.cpp  run_example.sh  writer.cpp
cmake-examples/16-boost-ipc-sync-container/: CMakeLists.txt  build.sh  consumer.cpp  producer.cpp  run_example.sh
cmake-examples/17-boost-asio-async-networking/: CMakeLists.txt  README.md  ReadMe.txt  client.cpp  run_local_example.sh  server.cpp
cmake-examples/18-debug-using-remote-ssh/: CMakeLists.txt  main
cmake-examples/18-debug-using-remote-ssh/src/: main.cpp
cmake-examples/19_remote_debugging/: CMakeLists.txt  Networking - Internal and external IPs and NAT.docx  ReadMe.txt  long_running.cpp
cmake-examples/20_debug_docker_container/: Dockerfile  long_running  long_running.cpp
cmake-examples/20_debug_docker_container/.devcontainer/: devcontainer.json
cmake-examples/21-docker/: CMakeLists.txt  Dockerfile  dev_profile.sh  project_struct.txt
cmake-examples/21-docker/app/: CMakeLists.txt  main.cpp
cmake-examples/21-docker/scripts/: build_image.sh  run_docker.sh  run_tests.sh
cmake-examples/21-docker/src/mylib/: CMakeLists.txt  DataProcessor.cpp  DataProcessor.h
cmake-examples/21-docker/tests/: CMakeLists.txt  DataProcessorTests.cpp
documents/: online_tools.md
documents/2025/: cmake_cheat_sheet.md
documents/2025/07_deps_interface_injection/: di_interface_injection.md  diff_between_di_and_dip.md
documents/2025/08_09_memory_leaks/: address_sanitaizer.md  monitor_process_top.md  (+2 more)
documents/roadmap/: C++ Training Plan 6-20-2025.md  C++ Training Plan 6-20-2025.txt  cpp_fintech_roadmap.md
multi-target-debugging/: CMakeLists.txt
multi-target-debugging/client/src/: client.cpp
multi-target-debugging/server/src/: server.cpp
scripts/bash/: my_tree  profile
(+85 files in other folders)
